# InnemSellarBackend

./: .gitignore  CLAUDE.md  README.md  schema.sql
.claude/: settings.json  settings.local.json
.claude/agents/: architect.md  code-reviewer.md  dba-engineer.md  devops-engineer.md  mentor.md  qa-engineer.md  rust-dev.md  security-reviewer.md
.claude/commands/: init-team.md  status-report.md
.claude/hooks/: format-on-save.sh  security-check.sh  validate-task.sh
.github/workflows/: build-push.yml  docs.yml
backups/: pre_url_update_20260413_135717.sql
docs/: architecture.md  technical-spec.md
docs/api-reference/: crates.js  help.html  settings.html  src-files.js
docs/api-reference/inem_sellar_backend/: all.html  fn.main.html  index.html  sidebar-items.js  struct.hello.html
docs/api-reference/inem_sellar_backend/config/: fn.default_addr.html  fn.default_jwt_expiracion.html  fn.port_addr.html  index.html  sidebar-items.js  struct.AppConfig.html
docs/api-reference/inem_sellar_backend/db/: fn.init_db.html  index.html  sidebar-items.js
docs/api-reference/inem_sellar_backend/errors/: enum.AppError.html  index.html
docs/api-reference/inem_sellar_backend/handlers/: index.html  sidebar-items.js
docs/api-reference/inem_sellar_backend/middleware/: index.html  sidebar-items.js
docs/api-reference/inem_sellar_backend/models/: index.html  sidebar-items.js
docs/api-reference/inem_sellar_backend/repositories/: index.html  sidebar-items.js
docs/api-reference/inem_sellar_backend/routes/: fn.crear_router.html  index.html  sidebar-items.js
docs/api-reference/inem_sellar_backend/services/: index.html  sidebar-items.js
docs/api-reference/search.index/: 001298c4d910.js  0018cdefefc4.js  00270623fc9d.js  002b70f17918.js  0032a685b41a.js  0058bc89f0bf.js  005bfef5f5db.js  006ba935275e.js  006fbb6e65d2.js  008250244c9f.js  009f94933fab.js  009fa85703c4.js  00a11023f153.js  00c583bcc596.js  00d02c097cf5.js  00db3fb76489.js  00df4b6cc420.js  00df6c566bf7.js  00f52859d3c0.js  0102d6ebc736.js  0116c42c4e3c.js  012b94a298e0.js  0138b0464632.js  018a7fbc4af0.js  01986aeab2d3.js  019f451db42e.js  01d2bd47dee5.js  01da48dbae8f.js  01eaf9623597.js  01efc5688efb.js  01ffe096bd65.js  0232e7d75d47.js  023ea0ab6342.js  02501cdbec6d.js  0275f348cfa2.js  028439e22fab.js  02865d6f8f6b.js  02a1bd43e0f2.js  02a5d9e5924c.js  02aa81cfeefb.js  (+2212 more)
docs/api-reference/search.index/crateNames/: b5587d3ba332.js
docs/api-reference/search.index/desc/: 203ceee0c1f8.js  54a9024960ea.js  71ddba900ec5.js  795b78c8b5a7.js  85e801ff55aa.js  d4cdb3317ac5.js  d55c0c9ef998.js  da3181c9dffa.js  da59730b29ad.js  e6e60746da7c.js  ec482cf141b0.js  f39a15565741.js  f96940a0687f.js  fa35c853a404.js
docs/api-reference/search.index/entry/: 0ad4c41043e8.js  14da73d3c100.js  25c0b04cc756.js  44460f185663.js  462a0796e7b3.js  48e70fc04f71.js  4aedfd847f47.js  54ae86c00962.js  5a892ef61ddb.js  5b0706fbb783.js  5f462902959e.js  615e843badba.js  6cc7000d5da9.js  6f21d319746b.js  71b25d880c47.js  74f035b71a7b.js  7f2c3cb63a47.js  821ebeac6f67.js  91915888e1b9.js  9c5a84e4e6cf.js  9f80341e9bd7.js  a1746b130989.js  b21457afef5c.js  cd7471f62465.js  cf56f0fcc021.js  d11f50f2ef54.js  d44117be8cc4.js  d5a1c231ad74.js  d9b3d41ad573.js  e3fcbe2067aa.js  ecb91bf96141.js  f2b4e7ba0ce0.js
docs/api-reference/search.index/function/: 0546ed817f12.js  0c07d0651771.js  1653e907796b.js  2ded13aa3654.js  3115b654e90c.js  75a39ae87541.js  774ea09f4a85.js  82a1f321a077.js  8545aa828e57.js  88ef10ee4692.js  973cae928a55.js  a52f5ba1f839.js  cbfe15ec1e06.js  dcbe7e18fafd.js  e8261382454b.js  f9c75e3554a0.js
docs/api-reference/search.index/generic_inverted_index/: 1ae773df0c56.js  37f36d21ecf7.js  3d5e8c99a665.js  446837e1beb2.js  4adfef584c99.js  4d4c006eeeb6.js  75184e78fd98.js  7a7b37c76745.js  8998e03b705c.js  8a06c86607e7.js  e668cdd930a4.js  e9a8677e77dd.js  f69c0fb61325.js
docs/api-reference/search.index/name/: 1680f294f75d.js  388c8de7d340.js  4137ee4bd767.js  432acbf859c1.js  5f7569e97b38.js  60704feb3af3.js  79231c518b33.js  8363729d0289.js  87b85d2f46da.js  8838b9fd76ac.js  944cc83d77ce.js  afc0a685256e.js  b1ce63d2fccd.js  (+1 more)
docs/en/: README.md
docs/es/: README.md
inem-sellar-backend/: .dockerignore  Cargo.toml  Dockerfile
inem-sellar-backend/src/: lib.rs  main.rs
inem-sellar-backend/src/config/: mod.rs
inem-sellar-backend/src/db/: mod.rs
inem-sellar-backend/src/errors/: mod.rs
inem-sellar-backend/src/handlers/: auth.rs  configuracion.rs  consejos.rs  cursos.rs  geografia.rs  mod.rs  ofertas.rs  prestaciones.rs  reportes.rs  usuarios.rs  votos.rs
inem-sellar-backend/src/middleware/: auth.rs  cors.rs  mod.rs
inem-sellar-backend/src/models/: comunidad_autonoma.rs  configuracion_aplicacion.rs  consejo.rs  consejo_provincia.rs  curso.rs  curso_provincia.rs  enums.rs  mod.rs  oferta_empleo.rs  oferta_provincia.rs  oficina_sepe.rs  prestacion.rs  proveedor_autenticacion.rs  provincia.rs  reporte.rs  token_refresco.rs  usuario.rs  voto.rs
inem-sellar-backend/src/repositories/: auth_repo.rs  configuracion_repo.rs  consejo_repo.rs  curso_repo.rs  geografia_repo.rs  mod.rs  oferta_repo.rs  prestacion_repo.rs  proveedor_autenticacion_repo.rs  reporte_repo.rs  usuario_repo.rs  voto_repo.rs
inem-sellar-backend/src/routes/: mod.rs
inem-sellar-backend/src/services/: auth_service.rs  email.rs  firebase_verifier.rs  mod.rs
inem-sellar-backend/tests/: admin_middleware.rs  auth_firebase.rs  cors.rs
k8s/: deploy.sh  namespace.yaml  pvc.yaml  service-external.yaml  service.yaml  statefulset.yaml
k8s/backend/: certificate.yaml  configmap.yaml  cronjob-image-updater.yaml  deploy.sh  deployment.yaml  ingressroute.yaml  middleware.yaml  service.yaml
scripts/: init-agent-team.sh  migrate_proveedor_firebase_to_google.sql  seed.sql  seed_data.py
(+666 files in other folders)
