[package]
name = "inem-sellar-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
salvo = { version = "0.91.1", features = ["affix-state"] }
tokio = { version = "1", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sea-orm = { version = "1", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
    "with-uuid",
    "with-json",
    "postgres-array",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15.7"
envy = "0.4.2"
uuid = {version = "1.23.0", features = ["v4", "serde"]}
chrono = {version = "0.4.44", features = ["serde"]}
thiserror = "2"
anyhow = "1"