[package]
name = "inem-sellar-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
salvo = { version = "0.91.1", features = ["affix-state", "oapi"] }
tokio = { version = "1", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sea-orm = { version = "1", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
    "with-uuid",
    "with-json",
    "postgres-array",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15.7"
envy = "0.4.2"
uuid = {version = "1.23.0", features = ["v4", "serde"]}
chrono = {version = "0.4.44", features = ["serde"]}
thiserror = "2"
anyhow = "1"
jsonwebtoken = "9"
sha2 = "0.10"
rand = "0.8"
# `reqwest` se usa exclusivamente para descargar el JWKS publico de Google
# necesario para verificar Firebase ID Tokens (RS256). Configuracion:
#   - `default-features = false`: desactiva el backend TLS por defecto (OpenSSL),
#      que requiere libssl-dev en el sistema y complica el Docker build.
#   - `rustls-tls`: backend TLS escrito 100% en Rust, consistente con el feature
#     `runtime-tokio-rustls` que ya usa sea-orm. Sin dependencias C nativas.
#   - `json`: habilita `Response::json::<T>()` para deserializar el JWKS de Google.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }