[package]
name = "inem-sellar-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
salvo = { version = "0.91.1", features = ["affix-state", "oapi"] }
tokio = { version = "1", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sea-orm = { version = "1", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
    "with-uuid",
    "with-json",
    "postgres-array",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15.7"
envy = "0.4.2"
uuid = {version = "1.23.0", features = ["v4", "serde"]}
chrono = {version = "0.4.44", features = ["serde"]}
thiserror = "2"
anyhow = "1"
jsonwebtoken = "9"
sha2 = "0.10"
rand = "0.8"
# `reqwest` se usa exclusivamente para descargar el JWKS publico de Google
# necesario para verificar Firebase ID Tokens (RS256). Configuracion:
#   - `default-features = false`: desactiva el backend TLS por defecto (OpenSSL),
#      que requiere libssl-dev en el sistema y complica el Docker build.
#   - `rustls-tls`: backend TLS escrito 100% en Rust, consistente con el feature
#     `runtime-tokio-rustls` que ya usa sea-orm. Sin dependencias C nativas.
#   - `json`: habilita `Response::json::<T>()` para deserializar el JWKS de Google.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# `lettre` es el cliente SMTP estandar de Rust. Se usa para enviar al admin
# una notificacion por email cada vez que un usuario crea un reporte.
# Configuracion:
#   - `default-features = false`: desactiva native-tls/OpenSSL.
#   - `smtp-transport`: habilita el transporte SMTP (vs solo el builder de mensajes).
#   - `tokio1-rustls-tls`: transporte async sobre tokio + rustls (sin libssl-dev),
#     consistente con el resto del crate (sea-orm + reqwest tambien usan rustls).
#   - `builder`: habilita `Message::builder()` para construir el mensaje.
#   - `hostname`: necesario para el saludo EHLO al servidor SMTP.
lettre = { version = "0.11", default-features = false, features = [
    "smtp-transport",
    "tokio1-rustls-tls",
    "builder",
    "hostname",
] }

# `[dev-dependencies]` se compilan SOLO al ejecutar `cargo test` o `cargo bench`,
# nunca entran en el binario de produccion.
#
# - `salvo` con feature `test`: anade `TestClient` para invocar handlers
#   sin levantar un puerto TCP real. La crate base ya esta en `[dependencies]`;
#   esta entrada solo activa el feature extra para builds de test.
# - `sea-orm` con feature `mock`: habilita `MockDatabase`, que permite
#   pre-programar respuestas SELECT/INSERT/UPDATE en orden FIFO y testar
#   el flujo de los handlers sin Postgres. Activarlo desactiva `Clone` en
#   `DatabaseConnection`; por eso los repos guardan `Arc<DatabaseConnection>`.
# - `wiremock`: servidor HTTP mockeable (async-native con tokio) para servir
#   un JWKS Firebase falso al `FirebaseVerifier` via su `new_with_url`.
# - `rsa`: generamos un keypair RSA 2048 al vuelo (una sola vez via LazyLock)
#   para firmar los tokens forjados en tests.
# - `base64`: codificar el modulo `n` y exponente `e` en el JWKS mock.
# - `tokio` con `rt-multi-thread`: necesario para `#[tokio::test]` que
#   levanta el runtime async en cada test.
[dev-dependencies]
salvo    = { version = "0.91.1", features = ["test"] }
sea-orm  = { version = "1", features = ["mock"] }
wiremock = "0.6"
tokio    = { version = "1", features = ["macros", "rt-multi-thread"] }
rsa      = "0.9"
base64   = "0.22"